It is used internally to add -Werror and other warnings flags, to
catch coding mistakes before releases.

** Win32: Perl is no longer required to build Libidn in Visual Studio.

** Win32: Functions in idna.h are also exported.
Reported by Adam Strzelecki <adam.strzelecki@java.pl>.

** doc: Included cyclomatic code complexity charts of the library code.
See doc/cyclo/.

** New 'make coverage' command to generate LCOV self-test coverage reports.
The output is created in doc/coverage/.

** Clarify copyright and license for gdoc, man pages, and C# port.

** Update gnulib files and translations.

** API and ABI is backwards compatible with the previous version.

* Version 1.10 (released 2008-08-27)

** idn: accept -n as short form for --nfkc.
Before '-k' was used as the short form, but all documentation has said
'-n'.  We now accept both short forms, and -n remains the documented
short form.  Reported by John McGowan <jmcgowan@inch.com> in
<http://lists.gnu.org/archive/html/help-libidn/2008-08/msg00000.html>.

** Fix compiler warnings.

** Update gnulib files.

** Update translations.

** API and ABI is backwards compatible with the previous version.

* Version 1.9 (released 2008-07-01)

** idn: fix error message when NFKC fails, and some other translation fixes.
Reported by Benno Schulenberg <coordinator@translationproject.org>.

** C# Libidn.dll: Work around bug that cause a failure during C# compilation.
See <https://bugzilla.novell.com/show_bug.cgi?id=372483>.

** Remove more non-free text from doc/specifications/rfc3454.txt.
The remaining data tables are not copyrightable.

** Update gnulib files, and include gnulib self-tests.

** Update translations.

** API and ABI is backwards compatible with the previous version.

* Version 1.8 (released 2008-04-23)

** Translations files not stored directly in git to avoid merge conflicts.
This allows us to avoid use of --no-location which makes the
translation teams happier.

** Update gnulib files.
